--- a/web.config
+++ b/web.config
@@ -5,7 +5,7 @@
       <add name="httpPlatformHandler" path="*" verb="*" modules="httpPlatformHandler" resourceType="Unspecified" />
     </handlers>
     <httpPlatform processPath="%JAVA_HOME%\bin\java.exe"
-        arguments="-Djava.net.preferIPv4Stack=true -Dserver.port=%HTTP_PLATFORM_PORT% -jar &quot;%HOME%\site\wwwroot\webapps\ocr-eureka.jar&quot -Dspring.profiles.active=G;">
+        arguments="-Djava.net.preferIPv4Stack=true -Dserver.port=%HTTP_PLATFORM_PORT% -jar &quot;%HOME%\site\wwwroot\webapps\ocr-eureka.jar&quot; -Dspring.profiles.active=G;">
     </httpPlatform>
   </system.webServer>
 </configuration>
